--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/01_diferencaIdade.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/01_diferencaIdade.html
@@ -6,11 +6,13 @@
     */
 
     //ENTRADA
+const idadeNovo = prompt (`qual a sua idade?`);
+const idadeVelho =  prompt (`qual a idade do seu irmão mais velho?`);
 
     
     //PROCESSAMENTO
 
     
     //SAÍDA
-
+document.write (`a diferença de idade entre vocês é ${idadeNovo - idadeVelho}`);
 </script>
