--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/02_somaInteiros.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/02_somaInteiros.html
@@ -6,11 +6,12 @@
     */
 
     //ENTRADA
-
+const numero1 =Number (prompt (`informe o primeiro numero`));
+const  numero2 = Number (prompt (`informe o segundo numero`));
     
     //PROCESSAMENTO
 
     
     //SAÍDA
-
+document.write (`o resultado da soma dos numero é ${numero1 + numero2}`);
 </script>
