--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/03_metrosParaMilimetros.html.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/03_metrosParaMilimetros.html.html
@@ -6,11 +6,11 @@
     */
 
     //ENTRADA
-
+    const Metros = Number (prompt(`informe a quantidade em Metros`))
     
     //PROCESSAMENTO
 
     
     //SAÍDA
-
+document.write (`a quantidade informada ficará em ${Metros * 1000} melimetros`)
 </script>
