--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/07_gorjeta.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/07_gorjeta.html
@@ -6,11 +6,12 @@
     */
 
     //ENTRADA
-
+    const precoJantar = Number (prompt(`qual foi o preço do jantar?`));
+    const gorjeta = 10;
     
     //PROCESSAMENTO
 
     
     //SAÍDA
-
+    document.write (`a gorjeta é ${precoJantar + precoJantar * gorjeta / 100}`);
 </script>
