--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/08_celsiusFahrenheit.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/08_celsiusFahrenheit.html
@@ -6,11 +6,11 @@
     */
 
     //ENTRADA
-
+const Celsius = Number (prompt(`informe a quantidade de graus em celsius`))
     
     //PROCESSAMENTO
-
+const fahrenheit = Celsius * 1.8 + 32
     
     //SAÍDA
-
+document.write (`a quantidade de graus celsius em fahrenheit ficará em ${fahrenheit}`)
 </script>
