--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/09_fahrenheitCelsius.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/09_fahrenheitCelsius.html
@@ -6,11 +6,11 @@
     */
 
     //ENTRADA
-
+    const fahrenheit = Number (prompt(`informe a quantidade de graus em fahrenheit`));
     
     //PROCESSAMENTO
 
     
     //SAÍDA
-
+document.write (`a quantidade de graus em celsius seria de ${(fahrenheit - 32) / 1.8}`)
 </script>
