--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/10_diasParaSegundos.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/10_diasParaSegundos.html
@@ -6,11 +6,11 @@
     */
 
     //ENTRADA
-
+const dias = Number (prompt(`quantos dias você quer converter em segundos?`));
     
     //PROCESSAMENTO
-
+const segundos = dias * 86400
     
     //SAÍDA
-
+document.write(`convertendo você terá ${segundos} segundos`) 
 </script>
