--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/12_diasPerdidosFumar.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/12_diasPerdidosFumar.html
@@ -6,11 +6,15 @@
     */
 
     //ENTRADA
-
+const cigarrosPorDia = Number (prompt(`quantos cigarros você fuma por dia?`));
+const anosFumando = Number (prompt(`a quantos anos você fuma?`));
     
     //PROCESSAMENTO
 
+const totalCigarros = cigarrosPorDia * 365 * anosFumando;
+const minutosPerdidos = totalCigarros * 10;
+const diasPerdidos = Math.floor (minutosPerdidos / (60 * 24));
     
     //SAÍDA
-
+document.write (`você perdeu ${diasPerdidos} dias da sua vida miseravel seu merda, para de fumar porra!!`)
 </script>
