--- a/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/14_duziaOvos.html
+++ b/02_variaveis_e_operadores/02_05_tipos_de_dados/02_05_01_listaExercicios/14_duziaOvos.html
@@ -6,11 +6,11 @@
     */
 
     //ENTRADA
+    const ovos = Number (prompt(`quantos ovos você comprou?`));
 
-    
     //PROCESSAMENTO
-
+const duzia = Math.ceil (ovos / 12);
     
     //SAÍDA
-
+document.write (`você comprou ${duzia} duzia de ovos`)
 </script>
