--- a/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/01_maioridade.html
+++ b/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/01_maioridade.html
@@ -1,16 +1,15 @@
 <meta charset="UTF-8">
 <script>
-    /*
-    PROBLEMA: MAIORIDADE
-    Leia a idade de uma pessoa e informe se ela já chegou à maioridade.Se ela ainda não chegou, informe quantos anos faltam para a maioridade.
-    */
+    //Problema: Maioridade
+    //Leia a idade de uma pessoa e informe se ela já chegou à maioridade.Se ela ainda não chegou, informe quantos anos faltam para a maioridade.
 
-    //ENTRADA
+    //Entrada
+    const idade = Number(prompt(`qual a sua idade?`));
+    const faltam = (18 - idade);
 
+    //Processamento
 
-    //PROCESSAMENTO
-
-    
-    //SAÍDA
+    //Saída
+    (idade >= 18) ? alert(`Você atingiu a maioridade!`) : alert(`Você ainda não atingiu a maioridade. Ainda Faltam ${faltam} anos`);
 
 </script>
