--- a/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/02_eleitor.html
+++ b/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/02_eleitor.html
@@ -1,16 +1,15 @@
 <meta charset="UTF-8">
 <script>
-    /*
-    PROBLEMA: ELEITOR
-    Considerando que no Brasil é possível votar a partir dos 16 anos de idade, leia o ano de nascimento de uma pessoa e informe se ela poderá votar no ano atual. Ignore mês e dia de nascimento.
-    */
+    //Problema: Eleitor
+    //Considerando que no Brasil é possível votar a partir dos 16 anos de idade, leia o ano de nascimento de uma pessoa e informe se ela poderá votar no ano atual. Ignore mês e dia de nascimento.
 
-    //ENTRADA
+    //Entrada
+    const anoNasc = Number(prompt(`Em qual ano você nasceu?`));
+    const anoAtual = Number(prompt(`Qual o ano atual?`));
 
-
-    //PROCESSAMENTO
-
-    
-    //SAÍDA
+    //Processamento
+    const idade = (anoAtual - anoNasc);
+    //Saída
+    (idade >= 16) ? alert (`Você já pode votar!`) : alert (`Você ainda não pode`)
 
 </script>
