--- a/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/07_notaParaConceito.html
+++ b/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/07_notaParaConceito.html
@@ -1,22 +1,27 @@
 <meta charset="UTF-8">
 <script>
-    /*
-    PROBLEMA: NOTA PARA CONCEITO
-    Converta a nota para conceito, conforme a tabela abaixo:
-    Nota                     Conceito
-    Entre 10.0 e 9.0            A
-    Entre 8.9 e 8.0             B
-    Entre 7.9 e 7.0             C
-    Entre 6.9 e 6.0             D
-    Entre 5.9 e zero            E
-    */
+    //Problema: Nota para Conceito
+    // Converta a nota para conceito, conforme a tabela abaixo:
+    // Nota                     Conceito
+    // Entre 10.0 e 9.0            A
+    // Entre 8.9 e 8.0             B
+    // Entre 7.9 e 7.0             C
+    // Entre 6.9 e 6.0             D
+    // Entre 5.9 e zero            E
 
-    //ENTRADA
+    //Entrada
+    const nota = Number(prompt(`qual a nota?(escreva usando 1 casa decimal. Ex: 1.2  4.0  6.5  9.0)`));
 
-
-    //PROCESSAMENTO
+    //Processamento
 
     
-    //SAÍDA
+    //Saída 
+    isNaN(nota) || nota >= 10.1 ? alert (`Digite uma nota válida!!`) :
+    (nota >= 9.0 && nota <= 10.0) ? alert (`Seu conceito é "A"!`) : 
+    (nota >= 8.0 && nota <= 8.9)  ? alert (`Seu conceito é "B"!`) : 
+    (nota >= 7.0 && nota <= 7.9)  ? alert (`Seu conceito é "C"!`) : 
+    (nota >= 6.0 && nota <= 6.9)  ? alert (`Seu conceito é "D"!`) : 
+    (nota >= 0.0 && nota <= 5.9)  ? alert (`Seu conceito é "E"!`) : 
+                                    alert (`Número de nota inválido, escreva um número entre 0.0 e 10.0`)
 
 </script>
