--- a/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/08_meioDeTransporte.html
+++ b/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/08_meioDeTransporte.html
@@ -1,18 +1,25 @@
 <meta charset="UTF-8">
 <script>
-    /*
-    PROBLEMA: MEIO DE TRANSPORTE MAIS BARATO
-    Faça um script que peça para o usuário informar o preço do litro do combustível e a quantidade de litros utilizados para se deslocar para o trabalho diariamente.
-    Peça também ao programa para o usuário informar o preço do transporte público que deverá pagar para se deslocar ao trabalho diariamente.
-    Verifique qual é o meio de transporte mais barato e apresente em tela, especificando quanto custará para ir e voltar do trabalho diariamente.
-    */
+    //Problema: Meio de transporte mais barato
+    // Faça um script que peça para o usuário informar o preço do litro do combustível e a quantidade de litros utilizados para se deslocar para o trabalho diariamente.
+    // Peça também ao programa para o usuário informar o preço do transporte público que deverá pagar para se deslocar ao trabalho diariamente.
+    // Verifique qual é o meio de transporte mais barato e apresente em tela, especificando quanto custará para ir e voltar do trabalho diariamente.
 
-    //ENTRADA
+    //Entrada
+    const precoGaso = Number(prompt(`Qual o preço do litro de gasolina?`).replace(",", "."));
+    const litros = Number(prompt(`Quantos litros de gasolina você gata para ir ao trabalho todo dia?`).replace(",", "."));
+    const publico = Number(prompt(`Qual o preço do transporte público para ir ao seu trabalho?`).replace(",", "."));
 
-
-    //PROCESSAMENTO
-
+    //Processamento
+    const precoCarro = precoGaso * litros * 2;
+    const precoPubli = publico * 2;
     
-    //SAÍDA
+    //Saída
+    (isNaN(precoGaso) || precoGaso < 0 || 
+     isNaN(litros) || litros < 0 || 
+     isNaN(publico) || publico < 0) ? alert(`Valor inválido. Por favor, insira apenas números positivos.`) :
+    (precoCarro < precoPubli) ? alert (`Indo de carro para o trabalho você gastará menos, gastando no total R$ ${precoCarro.toFixed(2)}`) : 
+    (precoPubli < precoCarro) ? alert (`Indo de transporte publico você gastará menos, gastando no total R$ ${precoPubli.toFixed(2)}`) : 
+                                alert (`os dois meios de transporte gastarão o mesmo: R$ ${precoCarro.toFixed(2)}`);
     
 </script>
