--- a/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/10_balancoFinanceiro.html
+++ b/03_estruturas_de_decisao/03_02_operador_ternario/03_02_01_listaExercicios/10_balancoFinanceiro.html
@@ -1,22 +1,28 @@
 <meta charset="UTF-8">
 <script>
-    /*
-    PROBLEMA: BALANÇO FINANCEIRO
-    Faça um script que peça para o usuário informar as despesas relacionadas com:
-    - Conta de água
-    - Conta de energia elétrica
-    - Conta de telefone
-    - Supermercado
-    Também peça para o usuário informar o valor que recebe de remuneração mensal (salário), proveniente da sua atuação profissional.
-    Verifique se o usuário ganha mais do que gasta e apresente em tela, indicando quanto que sobrou após o pagamento das contas ou quanto que faltou para poder pagar todas as contas previstas.
-    */
+    //Problema: Balanço financeiro
+    // Faça um script que peça para o usuário informar as despesas relacionadas com:
+    // - Conta de água
+    // - Conta de energia elétrica
+    // - Conta de telefone
+    // - Supermercado
+    // Também peça para o usuário informar o valor que recebe de remuneração mensal (salário), proveniente da sua atuação profissional.
+    // Verifique se o usuário ganha mais do que recebe e apresente em tela, indicando quanto que sobrou após o pagamento das contas ou quanto que faltou para poder pagar todas as contas previstas.
 
-    //ENTRADA
+    //Entrada
+    const agua = Math.ceil(Number (prompt(`quanto você tem que pagar da conta de água em um mês?`).replace("," , ".")));
+    const eletrica = Math.ceil(Number (prompt(`Quanto você tem que pagar de energia elétrica em um mês?`).replace("," , ".")));
+    const telefone = Math.ceil(Number (prompt(`Quanto você gasta na conta de telefone em um mês?`).replace("," , ".")));
+    const mercado = Math.ceil(Number (prompt(`Quanto você gasta de supermercado em um mês?`).replace("," , ".")));
+    const salario = Math.ceil(Number (prompt(`Quanto você ganha de salário?`).replace("," , ".")));
+    const trabalho = prompt (`Você trabalha atuando em qual área?`);
 
+        // Processamento
+    const totalDespesas = agua + eletrica + telefone + mercado;
+    const saldo = salario - totalDespesas;
 
-    //PROCESSAMENTO
-
-    
-    //SAÍDA
-    
+    // Saída
+    (saldo >= 0)
+    ? alert(`Você trabalha como ${trabalho}, recebe R$ ${salario}, e gasta R$ ${totalDespesas}. Sobra R$ ${saldo} após pagar todas as contas.`)
+    : alert(`Você trabalha como ${trabalho}, recebe R$ ${salario}, mas gasta R$ ${totalDespesas}. Está faltando R$ ${Math.abs(saldo)} para pagar todas as contas.`);
 </script>
